# messages_store

./: .gitignore  Dockerfile.dev  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.devcontainer/: devcontainer.json  on-create.sh
.github/workflows/: validate.yml
custom_components/messages_store/: __init__.py  app.js  config_flow.py  const.py  icons.json  manifest.json  notify.py  services.yaml  utils.py  view.py
custom_components/messages_store/repository/: __init__.py  messages_store.py  notices_store.py  sqlite_messages_store_repository.py  sqlite_notices_store_repository.py
custom_components/messages_store/services/: __init__.py  acknowledge_notice.py  add_bulk_messages.py  add_bulk_notices.py  add_message.py  add_notice.py  delete_message.py  delete_notice.py  edit_message.py  edit_notice.py  get_message.py  get_messages.py  get_notice.py  get_notices.py  helpers.py  notify.py  schemas.py  tag_replacer.py
custom_components/messages_store/translations/: en.json
frontend/: .prettierrc.js  package-lock.json  package.json  rollup.config.mjs  tailwind.config.js  tsconfig.json
frontend/src/: app.ts  list.ts  modal.ts  notification.ts
script/: bootstrap  setup
